--- a/index.html
+++ b/index.html
@@ -24,11 +24,15 @@
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 heading_div">Model is trained on </div>
                 <br>
                 <div class="btn btn-danger heading_div2"> Dad | Mom | Brother | Sister </div>
-                <br>
             </center>
-            <br><br>
-        </h3>
+            <br>
+        </h3><br><br>
+        <p class="btn btn-success result_para_tag">Family Member : <span id="resultMember"></span></p>
+        <br><br>
+        <p class="btn btn-success result_para_tag">Accuracy : <span id="result_accuracy"></span></p>
     </center>
+    <div class="copyright_footer">Developed by - WhitehatJr Team</div>
+    <script src="main.js "></script>
 </body>
 
 </html>
